# connect

./: .gitattributes  .gitignore  Makefile  TODO  docker-compose.observability.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py
libs/common/src/common/anti_replay/: __init__.py  clock_skew.py  memory_lru.py  metrics.py  nonce_store.py  replay_cache.py
libs/common/src/common/chain/: __init__.py  abi_loader.py  base.py  indexer.py  provider.py  settings.py
libs/common/src/common/crypto/: __init__.py  algorithms.py  did_key.py  hashing.py  jws.py
libs/common/src/common/onboarding/: __init__.py  models.py  proof.py  token.py
libs/common/src/common/policy_engine/: __init__.py  engine.py  evaluator.py  loader.py  models.py  policy.schema.yaml
libs/common/src/common/proof/: __init__.py  builder.py  hash_utils.py  models.py  replay_cache.py  verifier.py
libs/common/src/common/revocation/: __init__.py  bitstring.py  checker.py  manager.py  metrics.py  models.py  refresher.py
libs/common/src/common/secret_storage/: __init__.py  backend.py  base.py  factory.py  local.py  local_backend.py  settings.py  vault.py  vault_backend.py
libs/common/src/common/security_envelope/: RETRY_SAFETY.md  __init__.py  builder.py  errors.py  replay_cache.py  verifier.py
libs/common/src/common/sentinel_logging/: __init__.py  formatter.py  logger.py  otel.py  redaction.py  retention.py  ring_buffer.py  schema.py  sentinel_metrics.py
libs/common/src/common/telemetry/: __init__.py  logging.py  metrics.py  middleware.py  settings.py  tracing.py
libs/common/src/common/tls/: __init__.py  context.py  pinning.py
libs/common/src/common/trust_layer/: __init__.py  cache_models.py  client.py  memory_cache.py  metrics.py  persistent_cache.py  refresher.py
libs/common/src/common/vc_engine/: __init__.py  builder.py  errors.py  resolver.py  sd_jwt.py  verifier.py
libs/common/src/common/vc_schemas/: __init__.py  access_grant.py  base.py  policy.py  sentinel_identity.py  service_binding.py  session_token.py
libs/common/tests/: __init__.py
libs/common/tests/unit/: __init__.py
libs/common/tests/unit/anti_replay/: test_replay.py
libs/common/tests/unit/chain/: __init__.py  test_abi_loader.py  test_indexer.py  test_issuer_registry_client.py
libs/common/tests/unit/crypto/: __init__.py  test_algorithms.py  test_did_key.py  test_hashing.py  test_jws.py
libs/common/tests/unit/onboarding/: __init__.py  test_proof.py  test_token.py
libs/common/tests/unit/policy_engine/: test_evaluator.py
libs/common/tests/unit/proof/: __init__.py  test_builder.py  test_hash_utils.py  test_replay_cache.py  test_verifier.py
services/discovery/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/discovery/alembic/: env.py
services/discovery/alembic/versions/: 0001_initial_schema.py  0002_add_enrollment_token_fields.py  0003_add_bundle_statuslist_credential_fields.py  0004_add_chain_descriptor_lifecycle_audit.py  0005_add_service_chain_sync_fields.py  0006_add_service_base_url.py  0007_add_anchor_retry_fields.py  0008_add_credential_revoked_at.py
services/discovery/src/discovery/: __init__.py  app.py  config.py  dependencies.py  main.py  metrics.py
services/discovery/tests/: __init__.py  conftest.py  test_health.py  test_middleware.py
services/discovery/tests/unit/: __init__.py  test_api_hardening.py  test_apps_services.py  test_audit_logger.py  test_auth.py  test_chain_integration.py  test_config_bundles.py  test_credential_distribution.py  test_credential_issuer.py  test_descriptor_service.py  test_enrollments.py  test_lifecycle_service.py  test_metrics_health.py  test_onboarding.py  test_status_lists.py
services/sentinel/: Dockerfile  entrypoint.sh  pyproject.toml
services/sentinel/src/sentinel/: __init__.py  app.py  config.py  dependencies.py  main.py  telemetry.py
services/sentinel/tests/: __init__.py
services/sentinel/tests/security/: test_hardening.py
services/sentinel/tests/unit/: __init__.py  test_discovery_client.py  test_key_lifecycle.py  test_sentinel_app.py  test_sentinelctl_commands.py  test_wallet_storage.py
(+523 files in other folders)
