[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-common"
version = "0.1.0"
description = "Shared libraries for the Sentinel decentralized identity platform"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    "joserfc>=0.12.0",
    "pydantic>=2.7.0",
    "web3>=6.18.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "multiformats>=0.3.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "freezegun>=1.5.0",
    "fakeredis>=2.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*", "joserfc.*", "multibase.*", "multiformats.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
]
