[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-node"
version = "0.1.0"
description = "Sentinel node (producer/consumer) for the decentralized identity platform"
requires-python = ">=3.11"
dependencies = [
    "sentinel-common>=0.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "redis>=5.0.3",
    "web3>=6.18.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "prometheus-client>=0.20.0",
    "cryptography>=42.0.0",
    "jinja2>=3.1.4",
    "click>=8.1.7",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "fakeredis>=2.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sentinelctl = "sentinel.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*", "joserfc.*", "jinja2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
